--- a/html/rel.html
+++ b/html/rel.html
@@ -14,7 +14,8 @@
         <div class="formulario">
             <h2>Relatórios</h2>
             <form action="cgi-bin/cats.cgi" method="post">
-                <input type="text" name="rel" placeholder="Digite Completo ou Atual" required>
+                <input type="radius" name="rel"> Relatório Completo<br /><br />
+		<input type="radius" name="rel"> Relatório Atual<br /><br />
                 <input type="submit" value="ENVIAR">
             </form>
         </div>
